--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "main": "lib/ai-component",
   "bin": {
-    "ai-component": "bin/ai-component.js"
+    "aic": "bin/aic.js"
   },
   "engines": {
     "node": ">= 0.10.36",
