--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "ai-core": "^0.1.0",
     "ejs": "^2.5.1",
+    "eval": "^0.1.1",
     "fs-extra": "^0.30.0",
     "inquirer": "^1.1.2",
     "jsonfile": "^2.3.1",
