--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
   },
   "dependencies": {
     "ai-core": "^0.1.0",
+    "core-decorators": "^0.12.3",
     "ejs": "^2.5.1",
     "eval": "^0.1.1",
     "fs-extra": "^0.30.0",
     "inquirer": "^1.1.2",
     "jsonfile": "^2.3.1",
     "lodash": "^4.15.0",
+    "sort-json": "^1.3.0",
     "underscore.string": "^3.3.4"
   },
   "devDependencies": {
