--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "devDependencies": {
     "chai": "~2.1.2",
-    "mocha": "~2.2.1"
+    "mocha": "~2.2.1",
+    "mock-fs": "^3.11.0"
   },
   "keywords": []
 }
