--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "chai": "~2.1.2",
+    "chai-catch-exception": "^1.0.0",
+    "env-test": "^1.0.0",
     "mocha": "~2.2.1",
     "mock-fs": "^3.11.0"
   },
